--- a/html/index.html
+++ b/html/index.html
@@ -27,16 +27,21 @@
 <!-- wrapper -->
 <div class="wrapper">
   <header role="banner">
-    <div class="inner">
+    <div class="inner row">
 
-      <div class="logo">
-        <img src="img/logo.png" alt="" title="">
+      <div class="logo col-md-3">
+        <a href="">
+          <span class="logo-white">tatuazh</span><span class="logo-red">pro</span>
+        </a>
       </div><!-- /logo -->
 
-      <nav class="nav" role="navigation">
+      <nav class="nav col-md-9" role="navigation">
         <ul class="headnav">
-          <li>menu</li>
-          <li>menu</li>
+          <li>Брови</li>
+          <li>Глаза</li>
+          <li>Губы</li>
+          <li>Советы</li>
+          <li>татуировки</li>
         </ul>
       </nav><!-- /nav -->
 
@@ -44,7 +49,7 @@
   </header><!-- /header -->
 
   <section role="main">
-    <div class="inner">
+    <div class="inner row">
 
       <article>
         <h1 class="ctitle">Пример контента (рыба)</h1>
@@ -201,6 +206,27 @@
     <p class="copyright">
       © 2015 Собственность. Работает на html2wp easy.
     </p><!-- /copyright -->
+
+    <ul class="footer-nav">
+      <li>главная</li>
+      <li>о нас</li>
+      <li>новости</li>
+      <li>реклама на сайте</li>
+      <li>контакты</li>
+    </ul><!-- footer-nav -->
+
+    <ul class="social">
+      <li>
+        <a rel="nofollow" href=""></a>
+      </li>
+      <li>
+        <a rel="nofollow" href=""></a>
+      </li>
+      <li>
+        <a rel="nofollow" href=""></a>
+      </li>
+    </ul>
+    <!-- /.social -->
 
   </div><!-- /.inner -->
 </footer><!-- /footer -->
