--- a/html/index.html
+++ b/html/index.html
@@ -37,12 +37,12 @@
 
       <nav class="nav col-md-9" role="navigation">
         <ul class="headnav">
-          <li>Брови</li>
-          <li>Глаза</li>
-          <li>Губы</li>
-          <li>Советы</li>
-          <li>татуировки</li>
-        </ul>
+          <li><a href="">Брови</a></li>
+          <li><a href="">Глаза</a></li>
+          <li><a href="">Губы</a></li>
+          <li><a href="">Советы</a></li>
+          <li><a href="">татуировки</a></li>
+        </ul><!-- headnav -->
       </nav><!-- /nav -->
 
     </div><!-- /.inner -->
