go to wordpress

--- a/html/index.html
+++ b/html/index.html
@@ -51,7 +51,16 @@
   <section role="main">
     <div class="inner row">
 
-      <article>
+      <article class="home-slider col-md-12">
+        slider
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores fugit maiores perspiciatis odit, tempora necessitatibus error consequuntur rem inventore incidunt et non ipsa vel soluta labore sit voluptate, expedita quibusdam?
+      </article><!-- /.home-slider col-md-12 -->
+
+    </div><!-- inner row -->
+
+    <div class="inner row">
+
+      <article class="col-md-8">
         <h1 class="ctitle">Пример контента (рыба)</h1>
         <p>The purpose of this HTML is to help determine what default settings are with Bitters and to make sure that all possible HTML Elements are included in this HTML so as to not miss any possible Elements when designing a site.</p>
 
@@ -187,7 +196,7 @@
         </table>
       </article>
 
-      <aside class="sidebar" role="complementary">
+      <aside class="sidebar col-md-4" role="complementary">
         <div class="widget">
           <h6>Пример виджета</h6>
           <ul>
@@ -201,29 +210,29 @@
 </div><!-- /wrapper -->
 
 <footer role="contentinfo">
-  <div class="inner">
+  <div class="inner row">
 
-    <p class="copyright">
-      © 2015 Собственность. Работает на html2wp easy.
-    </p><!-- /copyright -->
+    <h6 class="copyright col-md-3">
+      © 2015 Собственность.
+    </h6><!-- /copyright -->
 
-    <ul class="footer-nav">
-      <li>главная</li>
+    <ul class="footer-nav col-md-7">
+      <li><a href="">главная</a></li>
       <li>о нас</li>
       <li>новости</li>
       <li>реклама на сайте</li>
       <li>контакты</li>
     </ul><!-- footer-nav -->
 
-    <ul class="social">
+    <ul class="social col-md-2">
       <li>
-        <a rel="nofollow" href=""></a>
+        <a rel="nofollow" href=""><i class="fa fa-vk"></i></a>
       </li>
       <li>
-        <a rel="nofollow" href=""></a>
+        <a rel="nofollow" href=""><i class="fa fa-facebook"></i></a>
       </li>
       <li>
-        <a rel="nofollow" href=""></a>
+        <a rel="nofollow" href=""><i class="fa fa-odnoklassniki"></i></a>
       </li>
     </ul>
     <!-- /.social -->
